<resources>
    <string name="app_name">Allergy Guard</string>
    <string name="welcome">Welcome</string>
    <string name="login_back">Login back to your account</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_pswd">Forgot Password?</string>
    <string name="sign_up_now">Please Signup to continue</string>
    <string name="signup">Sign up</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="upload">Upload</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history">History</string>
    <string name="search">Search</string>
    <string name="user">User</string>
    <string name="dashboard">Dashboard</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="crop_photo">Crop Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="ingredients">Ingredients</string>
    <string name="symptoms">Symptoms</string>
    <string name="no_response_from_server">No Response From Server</string>
    <string name="go_back">Go Back</string>
</resources>