<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.takusemba.cropme.CropLayout
        android:id="@+id/crop_view"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:cropme_background_alpha="80%"
        app:cropme_frame_height_percent="80%"
        app:cropme_frame_width_percent="80%"
        app:cropme_max_scale="2.0"
        app:cropme_overlay_shape="rectangle"
        app:cropme_with_border="true" />

    <Button
        android:id="@+id/camera_button"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="110dp"
        android:text="@string/take_photo"
        app:icon="@drawable/outline_camera" />

    <Button
        android:id="@+id/crop_button"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="110dp"
        android:text="@string/crop_photo"
        android:visibility="gone"
        app:icon="@drawable/outline_camera"
        tools:visibility="visible" />

    <Button
        android:id="@+id/upload_button"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="110dp"
        android:text="@string/upload"

        app:icon="@drawable/cloud_upload" />


</LinearLayout>
