<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_and_signup.LoginActivity">

    <TextView
        android:id="@+id/welcome_tv"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:text="@string/welcome"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_back_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="44dp"
        android:text="@string/login_back"
        android:textSize="15sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_tv" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:paddingStart="36dp"
        android:paddingEnd="36dp"
        app:layout_constraintTop_toBottomOf="@+id/login_back_tv">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="10dp"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_sqr"
                android:orientation="vertical"
                android:paddingTop="45dp"
                android:paddingBottom="45dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                >

                <TextView
                    android:id="@+id/login_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="40dp"
                    android:text="@string/login"

                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    app:boxStrokeColor="@color/white"
                    app:boxStrokeWidth="2dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textColorLink="@color/white"
                        app:boxStrokeColor="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/white"
                    app:boxStrokeColor="@color/white"
                    app:boxStrokeWidth="2dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/forget_pswd_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/forget_pswd"
                    android:layout_gravity="end"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/login"
                    android:textColor="@color/black" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>