<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_and_signup.RegistrationActivity">


    <TextView
        android:id="@+id/welcome_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:text="@string/welcome"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="44dp"
        android:text="@string/sign_up_now"
        android:textSize="15sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_tv" />

    <LinearLayout
        android:id="@+id/signup_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:paddingStart="36dp"
        android:paddingEnd="36dp"
        app:layout_constraintTop_toBottomOf="@+id/register_tv">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="10dp"

            >

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_sqr"
                android:orientation="vertical"
                android:paddingTop="40dp"
                android:paddingBottom="27dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                >

                <TextView
                    android:id="@+id/signup_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/signup"

                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    app:boxStrokeColor="@color/white"
                    app:boxStrokeWidth="2dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/full_name"
                        android:inputType="text"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textColorLink="@color/white"
                        app:boxStrokeColor="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    app:boxStrokeColor="@color/white"
                    android:layout_marginTop="10dp"
                    app:boxStrokeWidth="2dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textColorLink="@color/white"
                        app:boxStrokeColor="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/white"
                    app:boxStrokeColor="@color/white"
                    app:endIconMode="password_toggle"
                    app:boxStrokeWidth="2dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/white"
                    app:boxStrokeColor="@color/white"
                    app:endIconMode="password_toggle"
                    app:boxStrokeWidth="2dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/signup"
                    android:textColor="@color/black" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>

<!--    <TextView-->
<!--        android:id="@+id/already_loggedInTv"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="fgsdahjgdfjhsagdj"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/signup_form"-->

<!--        />-->

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->

<!--        android:text="ytreytiueiytuer"-->

<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/already_loggedInTv"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/signup_form" />-->

</androidx.constraintlayout.widget.ConstraintLayout>